# brainfuck

./: .gitignore  CMakeLists.txt  README.md
include/: dictionary.h  madlib.h  parser.h  program.h  token.h  vm.h
madbf/: CMakeLists.txt
madbf/src/: main.c
madlib/: CMakeLists.txt
madlib/include/: madlib.h
madlib/src/: madlib.c
madvm/: CMakeLists.txt
madvm/include/: dictionary.h  function.h  opcode.h  parser.h  program.h  token.h  vm.h
madvm/src/: dictionary.c  function.c  opcode.c  parser.c  program.c  token.c  vm.c
src/: Brainfuck.c  Brainfuck.h  CMakeLists.txt  dictionary.c  dictionary.h  madlib.c  madlib.h  main.c  parser.c  program.c  token.c  token.h  vm.c  vm.h
tests/: CMakeLists.txt  parser.c  tokenizer.c  vm.c
tests/src/: dictionary.c  function.c  opcode.c  parser.c  program.c  token.c  tokenizer.c  vm.c
